# schroedinger-solver

./: .gitignore  CMakeLists.txt  README.md
src/: CMakeLists.txt  application.c  application.h  main.c  scene.c  scene.h
src/objects/: arrow.c  arrow.h  cube.c  cube.h
src/renderer/: buffer.c  buffer.h  camera.c  camera.h  context.c  context.h  object.c  object.h  shader.c  shader.h  window.c  window.h
src/renderer/light/: ambient_light.h  point_light.h
src/scenes/: spinning_cubes.c  spinning_cubes.h  test_scene.c  test_scene.h
src/util/: dynarray.c  dynarray.h
